<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav.dokdisteformidling</groupId>
	<artifactId>dokdisteformidling</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>qdist013</module>
		<module>sdist001</module>
		<module>schemas-avtaltmelding</module>
		<module>schemas-altinn</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
	</parent>

	<properties>
		<java.version>21</java.version>

		<camel.version>4.11.0</camel.version>
		<cxf.version>4.1.1</cxf.version>
		<logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
		<resilience4j.version>2.3.0</resilience4j.version>
		<libraries-bom.version>26.59.0</libraries-bom.version>
		<tink.version>1.17.0</tink.version>
		<tink-gcpkms.version>1.10.0</tink-gcpkms.version>
		<com.ibm.mq.jakarta.client.version>9.4.2.0</com.ibm.mq.jakarta.client.version>
		<commons-io.version>2.18.0</commons-io.version>
		<nimbus-jose-jwt.version>10.2</nimbus-jose-jwt.version>
		<jaxws-ri.version>4.0.3</jaxws-ri.version>
		<commons-asic.version>1.0.2</commons-asic.version>
		<httpclient4.version>4.5.14</httpclient4.version>
		<bouncycastle-jdk18on.version>1.80</bouncycastle-jdk18on.version>

		<!-- NAV -->
		<melding-virksomhet-dokdistfordeling.version>7-18c61bf</melding-virksomhet-dokdistfordeling.version>

		<!-- test -->
		<spring-cloud-contract-wiremock.version>4.2.1</spring-cloud-contract-wiremock.version>

		<!-- Plugins -->
		<maven-jaxb2-plugin.version>2.1.1</maven-jaxb2-plugin.version>
		<hisrc-basicjaxb.version>2.2.1</hisrc-basicjaxb.version>
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>qdist013</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>sdist001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>schemas-avtaltmelding</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>schemas-altinn</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.meldinger.virksomhet</groupId>
				<artifactId>melding-virksomhet-dokdistfordeling</artifactId>
				<version>${melding-virksomhet-dokdistfordeling.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient4.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.cloud</groupId>
				<artifactId>libraries-bom</artifactId>
				<version>${libraries-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink</artifactId>
				<version>${tink.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink-gcpkms</artifactId>
				<version>${tink-gcpkms.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.ws</groupId>
				<artifactId>jaxws-ri</artifactId>
				<version>${jaxws-ri.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>com.ibm.mq.jakarta.client</artifactId>
				<version>${com.ibm.mq.jakarta.client.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-bom</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- cxf -->
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-bom</artifactId>
				<version>${cxf.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>no.ks.fiks</groupId>
				<artifactId>commons-asic</artifactId>
				<version>${commons-asic.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nimbusds</groupId>
				<artifactId>nimbus-jose-jwt</artifactId>
				<version>${nimbus-jose-jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot3</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk18on</artifactId>
				<version>${bouncycastle-jdk18on.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-jdk18on</artifactId>
				<version>${bouncycastle-jdk18on.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcutil-jdk18on</artifactId>
				<version>${bouncycastle-jdk18on.version}</version>
			</dependency>

			<!-- test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>